Added initial unit tests

--- a/NewPass.xcodeproj/xcshareddata/xcschemes/NewPass.xcscheme
+++ b/NewPass.xcodeproj/xcshareddata/xcschemes/NewPass.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E56DBC3821901641001D66AD"
+               BuildableName = "NewPassTests.xctest"
+               BlueprintName = "NewPassTests"
+               ReferencedContainer = "container:NewPass.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
