--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
 osx_image: xcode10.1
-xcode_workspace: NewPass.xcodeproj
+xcode_workspace: NewPass.xcworkspace
 xcode_scheme: NewPass - Unit Tests
 xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X
