--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: swift
-osx_image: xcode10.1
+osx_image: xcode11.4
 xcode_project: NewPass.xcodeproj
 xcode_scheme: NewPass - Unit Tests
-xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X
+xcode_destination: platform=iOS Simulator,OS=13.4.1,name=iPhone 11 Pro
